used touch-action:manipulation to prevent zoom on dblclick on mobile

--- a/index.css
+++ b/index.css
@@ -8,6 +8,7 @@ html, body {
     min-height: 100vh;
     font-family: 'Source Sans Pro', sans-serif;
     font-weight: 400;
+    touch-action: manipulation;
 }
 
 img {
